@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.2
 Date: ????
-  Changes:
+  Features:
+    - Added the ability to load presets into the spidertron
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.1
 Date: 2020-11-24
